--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Minesweeper Royale</title>
 </head>
 <body>
-    
+    <div id="app">
+        <div id="playerList">
+            <p>players</p>
+        </div>
+        <div id="chat">
+            <p>chat</p>
+        </div>
+        <div id="gameSpace">
+            <p>game</p>
+        </div>
+        
+    </div>
 </body>
 <script src="vue.js"></script>
 <script src="client.js"></script>
