slightly more UI+added base Vue

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
     <div id="app">
-        <div id="playerList">
-            <p>players</p>
+        <div id="players">
+            <table id="playerTable">
+                <thead>
+                    <tr>
+                        <td>Player Name</td>
+                        <td>Time Remaining</td>
+                    </tr>
+                </thead>
+            </table>
         </div>
         <div id="chat">
             <p>chat</p>
