--- a/Final-Project/pub/index.html
+++ b/Final-Project/pub/index.html
@@ -30,4 +30,5 @@
 </body>
 <script src="vue.js"></script>
 <script src="client.js"></script>
+<script src='/socket.io/socket.io.js'></script>
 </html>
