--- a/Final-Project/pub/index.html
+++ b/Final-Project/pub/index.html
@@ -23,12 +23,13 @@
             <p>chat</p>
         </div>
         <div id="gameSpace">
-            <p>game</p>
+            <table id="gameBoard">
+            </table>
         </div>
         
     </div>
 </body>
 <script src="vue.js"></script>
+<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 <script src="client.js"></script>
-<script src='/socket.io/socket.io.js'></script>
 </html>
